# siyi_ros2

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  TRACKING.md
.claude/: settings.local.json
.claude/agents/: 01-scaffolding.md  02-messages-services.md  03-connection-node.md  04-gimbal-services.md  05-telemetry-publishers.md  06-video-streaming.md  07-launch-config.md  08-tests.md  09-integration-check.md
siyi_ros2/: package.xml  setup.cfg  setup.py
siyi_ros2/config/: camera_calibration_example.yaml  camera_params.yaml  siyi_params.yaml
siyi_ros2/launch/: siyi.launch.py  siyi_full.launch.py
siyi_ros2/siyi_ros2/: _async_bridge.py  camera_node.py  siyi_node.py  state.py
siyi_ros2/siyi_ros2/publishers/: ai_tracking.py  attitude.py  laser.py
siyi_ros2/siyi_ros2/services/: camera.py  gimbal.py  system.py
siyi_ros2/siyi_ros2/subscribers/: __init__.py  aircraft_attitude.py  attitude_cmd.py  rate_cmd.py
siyi_ros2/test/: conftest.py  test_async_bridge.py  test_node_params.py  test_publishers.py  test_services.py
