<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>siyi_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy interface for SIYI gimbal-camera systems</description>
  <maintainer email="mohamedashraf123@gmail.com">Mohamed Abdelkader</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>siyi_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-cv-bridge</depend>
  <depend>camera_info_manager</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
